--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,19 @@ FakesAssemblies/
 
 # Visual Studio 6 workspace options file
 *.opt
+
+
+
+#.gitignore java template
+*.class
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
