--- a/ServeurSmartCity/ServeurSmartCity/ServeurSmartCity.csproj
+++ b/ServeurSmartCity/ServeurSmartCity/ServeurSmartCity.csproj
@@ -82,9 +82,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\newBaseTest.mdf" />
-    <Content Include="App_Data\newBaseTest_log.ldf">
-      <DependentUpon>newBaseTest.mdf</DependentUpon>
+    <Content Include="App_Data\Database1.mdf" />
+    <Content Include="App_Data\Database1_log.ldf">
+      <DependentUpon>Database1.mdf</DependentUpon>
     </Content>
     <Content Include="Global.asax" />
     <Content Include="Models\Model.edmx.sql" />
