--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,4 @@ FakesAssemblies/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 ServeurSmartCity/ServeurSmartCity/ServeurSmartCity.csproj
+*.csproj
