--- a/ServeurSmartCity/ServeurSmartCity/Web.config
+++ b/ServeurSmartCity/ServeurSmartCity/Web.config
@@ -76,6 +76,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ModelContainer" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\Database1.mdf;integrated security=True;multipleactiveresultsets=True;connect timeout=30;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ModelContainer" 
+         connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient; provider connection string=&quot; data source=(LocalDB)\v11.0; attachdbfilename=|DataDirectory|\Database1.mdf; integrated security=True; multipleactiveresultsets=True;connect timeout=30;application name=EntityFramework&quot;" 
+         providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
